<resources>
    <string name="app_name">Lab_2_1</string>

    <string name="one">Первая кнопка :)</string>
    <string name="two">Вторая кнопка $)</string>
    <string name="three">Третья кнопка ;)</string>
    <string name="four">Четвертая кнопка 8)</string>
    <string name="five">Пятая кнопка 0)</string>
    <string name="six">Шестая кнопка *)</string>
    <string name="orientation"> --сюда--|Ориентация экрана|--туда--</string>

</resources>